# mercury-reels

./: CHANGELOG.md  LICENSE.txt  MANIFEST.in  README.md  TODO.md  _custombuild.py  config.py  pyproject.toml  setup.py
.github/workflows/: pypi_upload.yaml  python-publish.yml
mercury/: Doxyfile  Makefile  test_all.py
mercury/reels/: Clips.py  Events.py  Intake.py  Targets.py  __init__.py  imports.py  main.dox  reels.h  reels_test.h  thousand_sequences.hpp
notebooks/: reels_event_optimization.ipynb  reels_event_optimization_colab.ipynb  reels_walkthrough.ipynb  reels_walkthrough_colab.ipynb
notebooks/data/: reels_mansion.csv  reels_mansion_targets.csv
reference/html/: annotated.html  classes.html  classreels_1_1Clients-members.html  classreels_1_1Clients.html  classreels_1_1Clips-members.html  classreels_1_1Clips.html  classreels_1_1Clips__coll__graph.md5  classreels_1_1Clips__inherit__graph.map  classreels_1_1Clips__inherit__graph.md5  classreels_1_1Events-members.html  classreels_1_1Events.html  classreels_1_1Logger-members.html  classreels_1_1Logger.html  classreels_1_1Targets-members.html  classreels_1_1Targets.html  classreels_1_1Targets__coll__graph.map  classreels_1_1Targets__coll__graph.md5  classreels_1_1Targets__inherit__graph.md5  classreels_1_1TimeUtil-members.html  classreels_1_1TimeUtil.html  classreels_1_1TimeUtil__inherit__graph.map  classreels_1_1TimeUtil__inherit__graph.md5  dir_9f4192de93450b987aa4b6bb0d24b94d.html  files.html  functions.html  functions_func.html  functions_vars.html  globals.html  globals_defs.html  globals_func.html  globals_type.html  globals_vars.html  graph_legend.html  hierarchy.html  index.html  inherit_graph_0.map  inherit_graph_0.md5  inherit_graph_1.map  inherit_graph_1.md5  inherit_graph_10.map  (+80 more)
reference/latex/: annotated.tex  classreels_1_1Clients.tex  classreels_1_1Clips.tex  classreels_1_1Clips__coll__graph.md5  classreels_1_1Events.tex  classreels_1_1Logger.tex  classreels_1_1Targets.tex  classreels_1_1Targets__inherit__graph.md5  classreels_1_1TimeUtil.tex  classreels_1_1TimeUtil__inherit__graph.md5  dir_9f4192de93450b987aa4b6bb0d24b94d.tex  files.tex  hierarchy.tex  index.tex  main_8dox.tex  namespacereels.tex  namespaces.tex  reels_8cpp.tex  reels_8cpp__incl.md5  reels_8h.tex  reels_8h__dep__incl.md5  (+27 more)
source/: Doxyfile  Makefile  test.sh
src/: DEVELOPMENT.md  Doxyfile  Makefile  mkdocs.yml  test.sh  test_all.py  version.py
(+112 files in other folders)
