[build-system]
requires		= ['setuptools>=61.0']
build-backend	= 'setuptools.build_meta'


[project]
authors			= [{name = 'Mercury Team', email = 'mercury.group@bbva.com'}]
readme			= 'README.md'
requires-python	= '>=3.8'


[tool.setuptools]
py-modules		= ['_custom_build']


[tool.setuptools.cmdclass]
build_py		= '_custom_build.build_py'
